--- a/crates/biome_js_transform/Cargo.toml
+++ b/crates/biome_js_transform/Cargo.toml
@@ -23,6 +23,7 @@ lazy_static       = { workspace = true }
 
 [dev-dependencies]
 biome_analyze      = { path = "../biome_analyze" }
+biome_formatter    = { path = "../biome_formatter" }
 biome_js_formatter = { path = "../biome_js_formatter" }
 biome_js_parser    = { path = "../biome_js_parser" }
 biome_test_utils   = { path = "../biome_test_utils" }
